<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarLessonType"
        android:background="@color/lavender"
        app:title="Los"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/etL1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/Lecția1"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etL2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/Lecția2"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etL3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/Lecția3"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/vocabular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/VocabularIncepator"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

    </LinearLayout>

</RelativeLayout>