<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activities.LevelActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarLevel"
        android:background="@color/lavender"
        app:title="Los"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Poti accesa doar nivelul ales"
            android:textColor="@color/lavender"
            android:textSize="15dp">

        </TextView>
        <EditText
            android:id="@+id/etLevel1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/începător"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etLevel2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/intermediar"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etLevel3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_tv"
            android:backgroundTint="@color/lavender"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/avansat"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />
        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:text="Reseteaza nivel"
            android:textColor="@color/lavender"
            android:textSize="15dp"></TextView>
    </LinearLayout>

</LinearLayout>